--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -9,7 +9,7 @@ server:
   
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml     
-  type-aliases-package: com.sunguoan.springcloud.entity  
+  type-aliases-package: com.tj.springcloud.entity  
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml                   
   
@@ -38,8 +38,8 @@ eureka:
     prefer-ip-address: true 
 
 info:
-  app.name: sunguoan-microservice
-  company.name: www.sunguoan.com
+  app.name: tj-microservice
+  company.name: www.tj.com
   build.artifactId: $project.artifactId$
   build.version: $project.version$
   
@@ -49,7 +49,7 @@ server:
   
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml     
-  type-aliases-package: com.sunguoan.springcloud.entity  
+  type-aliases-package: com.tj.springcloud.entity  
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml                   
   
