修改microservicecloud-config-eureka-client.yml

--- a/microservicecloud-config-eureka-client.yml
+++ b/microservicecloud-config-eureka-client.yml
@@ -14,6 +14,8 @@ eureka:
   instance: 
     hostname: eureka4.com
   client: 
+    register-with-eureka: false #false表示不向注册中心注册自己
+    fetch-registry: false  #false表示自己就是注册中心，我的职责就是维护服务实例，并不需要去检测服务
     service-url: 
       defaultZone: http://eureka4.com:7004/eureka/
 ---
@@ -27,5 +29,7 @@ eureka:
   instance: 
     hostname: eureka4.com
   client: 
+    register-with-eureka: false #false表示不向注册中心注册自己
+    fetch-registry: false  #false表示自己就是注册中心，我的职责就是维护服务实例，并不需要去检测服务
     service-url: 
       defaultZone: http://eureka4.com:7004/eureka/
